# rcc

./: .eslintrc.cjs  .gitignore  AGENTS.md  API_ROUTING_FIX.md  BLACKLIST_POOL_EXTRACTION.md  BOOTSTRAP_PIPELINE_INTEGRATION_GUIDE.md  BOOTSTRAP_SERVICE_ANALYSIS.md  CLAUDE.md  CODEBUDDY.md  CONFIGURATION_MODULE_RECORDING_REPORT.md  CONFIGURATION_MODULE_STATUS.md  CONFIGURATION_MODULE_TESTING_SUMMARY.md  CORRECT_ROUTING_TABLE_DESIGN.md  DEBUGCENTER_REFACTORING_SUMMARY.md  ENHANCED_ERROR_RESPONSE_CENTER_ARCHITECTURE.md  ENHANCED_ERROR_RESPONSE_CENTER_DESIGN.md  ENHANCED_ERROR_RESPONSE_CENTER_IMPLEMENTATION.md  ENHANCED_ERROR_RESPONSE_CENTER_SUMMARY.md  EXTRACTION_SUMMARY_ProvidersManager.md  INTEGRATED_MODULAR_SERVER.md  INTEGRATION_COMPLETE.md  INTEGRATION_TEST_SUMMARY.md  MEMORY.md  OAUTH2_REFACTORED_PLAN.md  OAUTH2_REFACTORING_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_INTEGRATION_COMPLETE.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_5_TESTING_SUMMARY.md  PIPELINE_ARCHITECTURE_REFACTOR_PLAN.md  PIPELINE_BASEMODULE_REFACTOR_REPORT.md  PROJECT_CLEANUP_PLAN.md  PROJECT_STRUCTURE.md  RCC4_STARTUP_ERROR_REPORT.md  RCC4_TWO_PHASE_DEBUG.md  README.md  README_ANALYSIS_SUMMARY_REPORT.md  README_INTEGRATED_SERVER.md  README_STANDARD_TEMPLATE.md  README_UPDATE_AND_CLEANUP_REPORT.md  (+124 more)
rust/: Cargo.toml
rust/crates/rcc-core-compat/: Cargo.toml
rust/crates/rcc-core-compat/src/: lib.rs
rust/crates/rcc-core-config/: Cargo.toml  config.json  system.config.json
rust/crates/rcc-core-config/src/: lib.rs
rust/crates/rcc-core-domain/: Cargo.toml
rust/crates/rcc-core-domain/src/: apply_patch_structured.rs  apply_patch_text.rs  args_json.rs  blocked_report.rs  compat_mapping.rs  compat_request_projection.rs  context_advisor.rs  context_weighted.rs  continuation_semantics.rs  continuation_sticky_key.rs  exec_command_normalize.rs  followup_message_trim.rs  followup_request_utils.rs  followup_sanitize.rs  followup_tool_compact.rs  health_weighted.rs  hub_canonical.rs  hub_mapping_ops.rs  hub_pipeline_skeleton.rs  lib.rs  marker_lifecycle.rs  mcp_resource_discovery.rs  message_content_text.rs  message_utils.rs  pre_command_directive.rs  pre_command_state.rs  pre_command_token.rs  provider_target_hint.rs  reasoning_markup.rs  responses_continuation_materialize.rs  responses_continuation_policy.rs  responses_conversation.rs  responses_ingress.rs  responses_protocol_mapping_audit.rs  router_selection_input.rs  routing_instruction_clean.rs  routing_instruction_preprocess.rs  routing_stop_message_codec.rs  stop_gateway.rs  stop_message_state.rs  (+4 more)
rust/crates/rcc-core-host/: Cargo.toml
rust/crates/rcc-core-host/src/: lib.rs  main.rs
rust/crates/rcc-core-orchestrator/: Cargo.toml
rust/crates/rcc-core-pipeline/: Cargo.toml
rust/crates/rcc-core-provider/: Cargo.toml
rust/crates/rcc-core-router/: Cargo.toml
rust/crates/rcc-core-servertool/: Cargo.toml
rust/crates/rcc-core-testkit/: Cargo.toml
(+1783 files in other folders)
