[package]
name = "rcc-core-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rcc-core-compat.workspace = true
rcc-core-domain.workspace = true
rcc-core-orchestrator.workspace = true
rcc-core-pipeline.workspace = true
rcc-core-provider.workspace = true
rcc-core-router.workspace = true
serde_json = "1"
